cmake_minimum_required(VERSION 3.6)
project(share_me)

IF(UNIX)
    ADD_DEFINITIONS(-D__unix__)
ELSEIF(WIN32)
    ADD_DEFINITIONS(-D_WIN32)
ENDIF(UNIX)

SET(SRC_DIR ../src)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

# ADD_SUBDIRECTORY(FileTransfer)
ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(${SRC_DIR}/utils)

INCLUDE_DIRECTORIES(${SRC_DIR}/FileTransfer)
INCLUDE_DIRECTORIES(${SRC_DIR}/utils)

add_executable(main main.cpp)

TARGET_LINK_LIBRARIES(main FileTransfer)