INCLUDE_DIRECTORIES(${HEADER_OUTPUT_PATH})
MESSAGE(STATUS "ppp ${HEADER_OUTPUT_PATH}")
link_directories(${GTEST_ROOT})
AUX_SOURCE_DIRECTORY(. SRC_LIST)

IF(UNIX)
    AUX_SOURCE_DIRECTORY(./linux SRC_LIST)
ELSEIF(WIN32)
    AUX_SOURCE_DIRECTORY(./win SRC_LIST)
ENDIF(UNIX)


ADD_LIBRARY(SSocket STATIC ${SRC_LIST})

IF(UNIX)
    TARGET_LINK_LIBRARIES(SSocket SLog)
ELSEIF(WIN32)
    TARGET_LINK_LIBRARIES(SSocket SLog Ws2_32 Mswsock)
ENDIF(UNIX)
# IF(${UNITTEST})
#     # add_executable(main main.cpp)
#     ADD_EXECUTABLE(socket_unittest socket_unittest.cpp)
#     TARGET_LINK_LIBRARIES(socket_unittest SSocket gtest gtest_main)
#     # TARGET_LINK_LIBRARIES(socket_unittest gtest gtest_main)
# ENDIF()